--- a/Source/OcrEngine/Prax.OcrEngine.Website/Views/Shared/Site.Master
+++ b/Source/OcrEngine/Prax.OcrEngine.Website/Views/Shared/Site.Master
@@ -1,40 +1,32 @@
 ﻿<%@ Master Language="C#" Inherits="System.Web.Mvc.ViewMasterPage" %>
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head runat="server">
-    <title><asp:ContentPlaceHolder ID="TitleContent" runat="server" /></title>
-    <link href="../../Content/Site.css" rel="stylesheet" type="text/css" />
-</head>
 
-<body>
-    <div class="page">
+	<head runat="server">
+		<title>
+			<asp:ContentPlaceHolder ID="TitleContent" runat="server">
+				Prax OCR</asp:ContentPlaceHolder>
+		</title>
+		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.1.1/build/cssreset/reset-min.css" />
+		<%--<link href="<%=ResolveUrl(@"~/Content/CSS/YUI-Reset.css") %>" rel="stylesheet" type="text/css" />--%>
+		<link href="<%=ResolveUrl(@"~/Content/CSS/Site.css") %>" rel="stylesheet" type="text/css" />
+		<asp:ContentPlaceHolder runat="server" ID="HeadContent" />
+	</head>
 
-        <div id="header">
-            <div id="title">
-                <h1>My MVC Application</h1>
-            </div>
-              
-            <div id="logindisplay">
-                <% Html.RenderPartial("LogOnUserControl"); %>
-            </div> 
-            
-            <div id="menucontainer">
-            
-                <ul id="menu">              
-                    <li><%: Html.ActionLink("Home", "Index", "Home")%></li>
-                    <li><%: Html.ActionLink("About", "About", "Home")%></li>
-                </ul>
-            
-            </div>
-        </div>
+	<body>
+		<div class="TopBar">
+			<ul class="Menu">
+				<%foreach (SiteMapNode menuItem in SiteMap.RootNode.ChildNodes) {%>
+				<li class="<%=menuItem == SiteMap.CurrentNode ? "MenuItem Current" : "MenuItem" %>">
+					<a href="<%=Html.AttributeEncode(menuItem.Url) %>" title="<%=Html.AttributeEncode(menuItem.Description) %>">
+						<%=Html.Encode(menuItem.Title) %></a> </li>
+				<%} %>
+			</ul>
+		</div>
+		<div class="Content">
+			<div class="Logo">Logo</div>
+			<asp:ContentPlaceHolder runat="server" ID="MainContent" />
+		</div>
+	</body>
 
-        <div id="main">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server" />
-
-            <div id="footer">
-            </div>
-        </div>
-    </div>
-</body>
 </html>
