--- a/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/MainWindow.xaml
+++ b/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:local="clr-namespace:Prax.OcrEngine.RecognitionClient"
-        Title="MainWindow" Height="350" Width="721">
+        Title="Prax OCR Client" Height="350" Width="721" Icon="Prax.ico">
 	<Window.Resources>
 		<DataTemplate x:Key="ProgressTemplate" DataType="{x:Type local:DocumentModel}">
 			<Grid>
