--- a/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/MainWindow.xaml
+++ b/Source/OcrEngine/Prax.OcrEngine.RecognitionClient/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:local="clr-namespace:Prax.OcrEngine.RecognitionClient"
-        Title="Prax OCR Client" Height="350" Width="721" Icon="Prax.ico">
+        Title="Prax OCR Client" Height="400" Width="800" Icon="Prax.ico">
 	<Window.Resources>
 		<DataTemplate x:Key="ProgressTemplate" DataType="{x:Type local:DocumentModel}">
 			<Grid>
@@ -62,12 +62,12 @@
 				</StackPanel>
 			</Button>
 		</ToolBar>
-		<ListView Name="filesList" Grid.Row="1" SelectedIndex="1">
+		<ListView Name="filesList" Grid.Row="1" SelectedIndex="1" KeyUp="FilesList_KeyUp">
 			<ListView.ItemContainerStyle>
 				<Style TargetType="ListViewItem">
 					<Setter Property="HorizontalContentAlignment" Value="Stretch" />
 					<Setter Property="VerticalContentAlignment" Value="Stretch" />
-					<!--<Setter Property="Height" Value="36px" />-->
+					<Setter Property="FontSize" Value="16px" />
 				</Style>
 			</ListView.ItemContainerStyle>
 			<ListView.ItemsSource>
@@ -75,7 +75,7 @@
 			</ListView.ItemsSource>
 			<ListView.View>
 				<GridView>
-					<GridViewColumn Header="Name" DisplayMemberBinding="{Binding FileName}" Width="150" />
+					<GridViewColumn Header="Name" DisplayMemberBinding="{Binding FileName}" Width="200" />
 					<GridViewColumn Header="Size" Width="90">
 						<GridViewColumn.CellTemplate>
 							<DataTemplate DataType="{x:Type local:DocumentModel}">
@@ -83,7 +83,7 @@
 							</DataTemplate>
 						</GridViewColumn.CellTemplate>
 					</GridViewColumn>
-					<GridViewColumn Header="Progress" CellTemplate="{StaticResource ProgressTemplate}" Width="100"/>
+					<GridViewColumn Header="Progress" CellTemplate="{StaticResource ProgressTemplate}" Width="140"/>
 				</GridView>
 			</ListView.View>
 		</ListView>
