--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
@@ -33,20 +33,61 @@
             width: 100%;
             height: 100%;
         }
+        #textWizard {
+            display: none;
+            text-align: left;
+        }
+        #sourceText, #translatedText {
+            width: 100%;
+            font-size: 12px;
+            height: 3em;
+            padding: 3px;
+        }
+        #translatedText {
+            background: #eee;
+        }
+        #translatedText.Loading {
+            background: url('/Content/Images/Loading.gif') no-repeat bottom right;
+            color: #ddd;
+        }
+        #translationBranding {
+            width: 100%;
+            padding-top: 2px;
+            text-align: right;
+            font-size: 11px;
+            color: #686868;
+        }
     </style>
 }
 @* Firefox doesn't like to put Flash in real <button>s *@
 <div id="upload" class="Large Button">
     <input type="file" value="Upload your own image" /></div>
-<button id="textWizard" class="Large">
+<button id="showTextWizard" class="Large">
     Create an image</button>
+<div id="textWizard" title="Create an Image">
+    <section class="step" id="translationStep">
+        <textarea rows="3" cols="140" id="sourceText" class="ui-wizard-content ui-helper-reset ui-state-default ui-corner-all">Enter a text here to translate</textarea>
+        <div id="translatedText" class="ui-wizard-content ui-helper-reset ui-state-default ui-corner-all">
+            Translation will appear here</div>
+        <div id="translationBranding">translation powered by<img style="padding-left: 1px;
+            vertical-align: middle;" src="https://www.google.com/uds/css/small-logo.png"></div>
+    </section>
+</div>
 @section EndScripts {
+
+    <script type="text/javascript" src="https://www.google.com/jsapi?key=AIzaSyAZqE4ltlMg5yUc-9mSo80UBcr7KW6U6L4"></script>
 
     <script src="@Href("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Scripts/swfobject.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Scripts/jquery.uploadify.v2.1.4.js")" type="text/javascript"></script>
+
+    <script src="@Href("~/Scripts/bbq.js")" type="text/javascript"></script>
+
+    <script src="@Href("~/Scripts/jquery.form.wizard.js")" type="text/javascript"></script>
+
+    <script src="@Href("~/Content/Javascript/TextWizard.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Content/Javascript/DemoPage.js")" type="text/javascript"></script>
 
