--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
@@ -96,6 +96,18 @@
             font-size: 11px;
             color: #686868;
         }
+        
+        #formatContainer {
+            -moz-box-sizing: border-box;
+            -ms-box-sizing: border-box;
+            box-sizing: border-box;
+            resize: none;
+            position: absolute;
+            width: 346px;
+            top: 0;
+            bottom: 0;
+            height: auto;
+        }
     </style>
 }
 @* Firefox doesn't like to put Flash in real <button>s *@
@@ -116,6 +128,14 @@
         <div id="translationBranding">translation powered by<img alt=" Google" style="padding-left: 1px;
             vertical-align: middle;" src="https://www.google.com/uds/css/small-logo.png"></div>
     </section>
+    <section class="step" id="formatStep">
+        <div class="Instructions ui-corner-all">
+            <h2>
+                Instructions</h2>
+            Add formatting to the translated text. </div>
+<div id="formatContainer">
+        <textarea id="formatBox"></textarea></div>
+    </section>
 </div>
 @section EndScripts {
 
@@ -130,6 +150,7 @@
     <script src="@Href("~/Scripts/bbq.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Scripts/jquery.form.wizard.js")" type="text/javascript"></script>
+    <script src="@Href("~/Scripts/tiny_mce/jquery.tinymce.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Content/Javascript/TextWizard.js")" type="text/javascript"></script>
 
