--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @section Head {
     <link href="@Href("~/Content/CSS/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
     <style type="text/css">
-        .Button.Large, button.Large {
+        .LargeButtons > * {
             font-size: 18px;
             width: 190px;
             height: 90px;
@@ -15,7 +15,7 @@
             position: relative;
             vertical-align: top;
         }
-        div.Button .ui-button-text {
+        .LargeButtons div .ui-button-text {
             /* Hack for vertically centering text in fake <button>s */
             -moz-box-sizing: border-box;
             -ms-box-sizing: border-box;
@@ -24,6 +24,16 @@
             width: 190px;
             display: table-cell;
             vertical-align: middle;
+        }
+        .LargeButtons #dropTarget {
+            display: none;
+            font-weight: bold;
+        }
+        .LargeButtons.Dragging #upload {
+            display: none;
+        }
+        .LargeButtons.Dragging #dropTarget {
+            display: inline-block;
         }
         #upload {
             position: relative;
@@ -108,13 +118,33 @@
             bottom: 0;
             height: auto;
         }
+        
+        #finalStep #loadingPanel .Loading {
+            background: url('/Content/Images/Loading.gif') no-repeat center center;
+            width: 346px;
+            top: 0;
+            bottom: 0;
+            height: auto;
+            position: absolute;
+        }
+        .FramedImage {
+            width: 300px;
+            margin: 23px 17px 0;
+            padding: 4px;
+            background: white;
+            border: 2px black groove;
+        }
     </style>
 }
 @* Firefox doesn't like to put Flash in real <button>s *@
-<div id="upload" class="Large Button">
-    <input type="file" value="Upload your own image" /></div>
-<button id="showTextWizard" class="Large">
-    Create an image</button>
+<div class="LargeButtons">
+    <div id="upload" class="Large Button">
+        <input type="file" value="Upload your own image" /></div>
+    <div id="dropTarget" class="Large ui-widget ui-corner-all ui-widget-header"><span
+        class="ui-button-text">Drop image here</span></div>
+    <button id="showTextWizard" class="Large">
+        Create an image</button>
+</div>
 <div id="textWizard" title="Create an Image">
     <section class="step" id="translationStep">
         <div class="Instructions ui-corner-all">
@@ -133,8 +163,24 @@
             <h2>
                 Instructions</h2>
             Add formatting to the translated text. </div>
-<div id="formatContainer">
-        <textarea id="formatBox"></textarea></div>
+        <div id="formatContainer">
+            <textarea id="formatBox"></textarea></div>
+    </section>
+    <section class="step" id="finalStep">
+        <div id="loadingPanel">
+            <div class="Instructions ui-corner-all">
+                <h2>
+                    Loading...</h2>
+                Please wait while your image is created. </div>
+            <div class="Loading"></div>
+        </div>
+        <div id="imagePanel">
+            <div class="Instructions ui-corner-all">
+                <h2>
+                    Instructions</h2>
+                Drag the new image to the Upload button. </div>
+            <img id="generatedImage" class="DragImage FramedImage" />
+        </div>
     </section>
 </div>
 @section EndScripts {
@@ -150,6 +196,7 @@
     <script src="@Href("~/Scripts/bbq.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Scripts/jquery.form.wizard.js")" type="text/javascript"></script>
+
     <script src="@Href("~/Scripts/tiny_mce/jquery.tinymce.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Content/Javascript/TextWizard.js")" type="text/javascript"></script>
