--- a/Source/OcrEngine/SimpleWebDemo/Views/Shared/_Layout.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Title</title>
+		<link rel="icon" type="image/vnd.microsoft.icon" href="@Href("~/FavIcon.ico")">
 
         <script src="@Href("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
 
