--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
@@ -93,6 +93,8 @@
             top: 152px;
             bottom: 0;
             background: #eee;
+            direction: rtl;
+            text-align: right;
         }
         #translatedText.Loading {
             background: url('/Content/Images/Loading.gif') no-repeat bottom left;
@@ -101,7 +103,7 @@
         #translationBranding {
             position: absolute;
             bottom: 0;
-            right: 170px;
+            right: 154px;
             padding: 0 6px 6px 0;
             text-align: right;
             font-size: 11px;
@@ -118,6 +120,10 @@
             top: 0;
             bottom: 0;
             height: auto;
+        }
+        #formatContainer .mceEditor {
+            height: 100%;
+            display: block;
         }
         
         #finalStep #loadingPanel .Loading {
