--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
@@ -168,8 +168,11 @@
         #scanPreview {
             margin: 4px auto 0;
         }
-        #uploadPane, #scanPane {
+        #uploadPane, #scanPane, #resultTabs {
             display: none;
+        }
+        #resultImage img {
+            margin: 0 auto;
         }
         .MainProgess {
             -moz-box-sizing: border-box;
@@ -177,6 +180,12 @@
             box-sizing: border-box;
             width: 312px;
             margin: 10px auto;
+        }
+        #diff ins {
+            background: #cfc;
+        }
+        #diff del {
+            background: #fcc;
         }
     </style>
 }
@@ -201,6 +210,19 @@
         Recoginzing...</h2>
     <img class="FramedImage" id="scanPreview" />
     <div id="scanProgress" class="MainProgess"></div>
+</div>
+<div id="resultTabs">
+    <ul>
+        <li class="GenerationResult"><a href="#originalText">Original</a></li>
+        <li><a href="#resultText">Recognized</a></li>
+        <li class="GenerationResult"><a href="#diff">Mistakes</a></li>
+        <li><a href="#resultImage">Image</a></li>
+    </ul>
+    <div id="originalText"></div>
+    <div id="resultText"></div>
+    <div id="diff"></div>
+    <div id="resultImage">
+        <img class="FramedImage" /></div>
 </div>
 <div id="textWizard" title="Create an Image">
     <section class="step" id="translationStep">
@@ -244,6 +266,8 @@
 
     <script type="text/javascript" src="https://www.google.com/jsapi?key=AIzaSyAZqE4ltlMg5yUc-9mSo80UBcr7KW6U6L4"></script>
 
+    <script src="@Href("~/Scripts/jsdiff.js")" type="text/javascript"></script>
+    <script src="@Href("~/Scripts/wdiff.js")" type="text/javascript"></script>
     <script src="@Href("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
 
     <script src="@Href("~/Scripts/swfobject.js")" type="text/javascript"></script>
