--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Index.cshtml
@@ -1,272 +1,20 @@
 ﻿@{
-    ViewBag.Title = "Prax OCR Demo";
+    ViewBag.Title = "Prax OCR";
 }
-@section Head {
-    <link href="@Href("~/Content/CSS/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
+@section Head{
     <style type="text/css">
-        .LargeButtons > * {
-            font-size: 18px;
-            width: 190px;
-            height: 90px;
-            display: inline-block;
-            -moz-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            box-sizing: border-box;
-            position: relative;
-            vertical-align: top;
+        .Links {
+            font-size: 35px;
         }
-        .LargeButtons div .ui-button-text {
-            /* Hack for vertically centering text in fake <button>s */
-            -moz-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            box-sizing: border-box;
-            height: 90px;
-            width: 190px;
-            display: table-cell;
-            vertical-align: middle;
-            padding: 0 !important;
-        }
-        .LargeButtons #dropTarget {
-            display: none;
-            font-weight: bold;
-            color: Black;
-        }
-        .LargeButtons.Dragging #upload {
-            display: none;
-        }
-        .LargeButtons.Dragging #dropTarget {
-            display: inline-block;
-        }
-        .GreenShade {
-            background: green;
-            height: 100%;
-            width: 100%;
-            position: absolute;
-        }
-        #upload {
-            position: relative;
-        }
-        #upload object {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
-        #textWizard {
-            display: none;
-            text-align: left;
-            font-size: 12px;
-            padding: 0;
-            margin: 4px 0 0 0;
-            height: 300px;
-            width: 500px;
-            border-radius: 0;
-            overflow: hidden;
-        }
-        
-        #textWizard > .StepContainer {
-            width: 2000%;
-            position: absolute;
-            overflow: hidden;
-        }
-        .StepContainer > .step {
-            float: left;
-            position: relative;
-            overflow: hidden;
-        }
-        #textWizard .step .Instructions {
-            -moz-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            box-sizing: border-box;
-            position: absolute;
-            right: 0;
-            width: 150px;
-            background: #ff8;
-            border: solid 1px #dd0;
-            padding: 3px;
-            top: 0;
-            bottom: 0;
-            height: auto;
-        }
-        #textWizard .step .Instructions h2 {
-            font-size: 1.1em;
-            color: Purple;
-            margin: 0 0 .3em 0;
-        }
-        #sourceText, #translatedText {
-            -moz-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            box-sizing: border-box;
-            resize: none;
-            position: absolute;
-            width: 346px;
-            height: auto;
-            padding: 3px;
-        }
-        #sourceText {
-            top: 0;
-            height: 148px;
-        }
-        #translatedText {
-            top: 152px;
-            bottom: 0;
-            background: #eee;
-            direction: rtl;
-            text-align: right;
-        }
-        #translatedText.Loading {
-            background: url('/Content/Images/Loading.gif') no-repeat bottom left;
-            color: #ddd;
-        }
-        
-        #formatContainer {
-            -moz-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            box-sizing: border-box;
-            resize: none;
-            position: absolute;
-            width: 346px;
-            top: 0;
-            bottom: 0;
-            height: auto;
-        }
-        #formatContainer .mceEditor {
-            height: 100%;
-            display: block;
-        }
-        
-        #finalStep #loadingPanel .Loading {
-            background: url('/Content/Images/Loading.gif') no-repeat center center;
-            width: 346px;
-            top: 0;
-            bottom: 0;
-            height: auto;
-            position: absolute;
-        }
-        .FramedImage {
-            width: 300px;
-            margin: 23px 17px 0;
+        .Links a {
+            text-decoration: none;
             padding: 4px;
-            background: white;
-            border: 2px black groove;
-            display: block;
+            text-shadow: 0px 0px 5px #aaf;
         }
-        #scanPreview.Loading {
-            background: white url('/Content/Images/Loading.gif') no-repeat center center;
-            min-height: 40px;
-        }
-        #scanPreview {
-            margin: 4px auto 0;
-        }
-        #uploadPane, #scanPane, #resultTabs {
-            display: none;
-        }
-        #resultImage img {
-            margin: 0 auto;
-        }
-        .MainProgess {
-            -moz-box-sizing: border-box;
-            -ms-box-sizing: border-box;
-            box-sizing: border-box;
-            width: 312px;
-            margin: 10px auto;
-        }
-        #diff ins {
-            background: #cfc;
-        }
-        #diff del {
-            background: #fcc;
+        .Links a:hover {
+            text-decoration: underline;
         }
     </style>
 }
-@* Firefox doesn't like to put Flash in real <button>s *@
-<div class="LargeButtons" id="initialButtons">
-    <div id="upload" class="Large Button">
-        <input type="file" value="Upload your own image" /></div>
-    <div id="dropTarget" class="Large ui-widget ui-corner-all ui-state-default ui-button">
-        <div class="GreenShade"></div>
-        <span class="ui-button-text">Drop image here</span> </div>
-    <button id="showTextWizard" class="Large">
-        Create an image</button>
-</div>
-<div id="uploadPane">
-    <h2>
-        Uploading...</h2>
-    <img src="@Href("~/Content/Images/Loading.gif")" alt="Uploading..." title="Uploading image..." />
-    <div id="uploadProgress" class="MainProgess"></div>
-</div>
-<div id="scanPane">
-    <h2>
-        Recoginzing...</h2>
-    <img class="FramedImage" id="scanPreview" />
-    <div id="scanProgress" class="MainProgess"></div>
-</div>
-<div id="resultTabs">
-    <ul>
-        <li class="GenerationResult"><a href="#originalText">Original</a></li>
-        <li><a href="#resultText">Recognized</a></li>
-        <li class="GenerationResult"><a href="#diff">Mistakes</a></li>
-        <li><a href="#resultImage">Image</a></li>
-    </ul>
-    <div id="originalText"></div>
-    <div id="resultText"></div>
-    <div id="diff"></div>
-    <div id="resultImage">
-        <img class="FramedImage" /></div>
-</div>
-<div id="textWizard" title="Create an Image">
-    <section class="step" id="translationStep">
-        <div class="Instructions ui-corner-all">
-            <h2>
-                Instructions</h2>
-            Enter text in any language to translate it into Arabic for the OCR to recognize.
-        </div>
-        <textarea id="sourceText" class="ui-wizard-content ui-helper-reset ui-state-default ui-corner-all">Enter a text here to translate</textarea>
-        <div id="translatedText" class="ui-wizard-content ui-helper-reset ui-state-default ui-corner-all">
-            Translation will appear here</div>
-    </section>
-    <section class="step" id="formatStep">
-        <div class="Instructions ui-corner-all">
-            <h2>
-                Instructions</h2>
-            Add formatting to the translated text. </div>
-        <div id="formatContainer">
-            <textarea id="formatBox"></textarea></div>
-    </section>
-    <section class="step" id="finalStep">
-        <div id="loadingPanel">
-            <div class="Instructions ui-corner-all">
-                <h2>
-                    Loading...</h2>
-                Please wait while your image is created. </div>
-            <div class="Loading"></div>
-        </div>
-        <div id="imagePanel">
-            <div class="Instructions ui-corner-all">
-                <h2>
-                    Instructions</h2>
-                Drag the new image to the Upload button. </div>
-            <img id="generatedImage" class="DragImage FramedImage" />
-        </div>
-    </section>
-</div>
-@section EndScripts {
-
-    <script src="@Href("~/Scripts/wdiff.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Scripts/jquery-ui-1.8.11.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Scripts/swfobject.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Scripts/jquery.uploadify.v2.1.4.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Scripts/jquery.filedrop.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Scripts/tiny_mce/jquery.tinymce.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Content/Javascript/TextWizard.js")" type="text/javascript"></script>
-
-    <script src="@Href("~/Content/Javascript/DemoPage.js")" type="text/javascript"></script>
-
-}
+<div class="Links"><a href="http://blog.padocr.com">Blog</a> &middot; <a href="@(Request.IsLocal ? "Demo" : "http://demo.padocr.com")">
+    Demo</a> &middot; <a href="About">About</a></div>
