--- a/Source/OcrEngine/SimpleWebDemo/Views/Shared/_Layout.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>@ViewBag.Title</title>
-		<link rel="icon" type="image/vnd.microsoft.icon" href="@Href("~/FavIcon.ico")">
+        <link rel="icon" type="image/vnd.microsoft.icon" href="@Href("~/FavIcon.ico")">
 
         <script src="@Href("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
 
@@ -20,6 +20,15 @@ var basePath = "@Href("~/")";
                 margin: 0;
                 padding: 0;
                 text-align: center;
+            }
+            a:link {
+                color: blue;
+            }
+            a:visited {
+                color: #00C;
+            }
+            a:active {
+                color: #A00;
             }
             div.Content {
                 margin: 0 auto;
