Fix stupid typo

--- a/Source/OcrEngine/SimpleWebDemo/Views/Home/Demo.cshtml
+++ b/Source/OcrEngine/SimpleWebDemo/Views/Home/Demo.cshtml
@@ -203,7 +203,7 @@
 </div>
 <div id="scanPane">
     <h2>
-        Recoginzing...</h2>
+        Recognizing...</h2>
     <img class="FramedImage" id="scanPreview" />
     <div id="scanProgress" class="MainProgess"></div>
 </div>
